# log

./: .gitignore  .travis.yml  DEPENDENCIES  INSTALL  Makefile.am  README.md  _config.yml  configure.ac  index.md  log.pc.in  package.json
.meta/: AUTO  TRACKED
_doc/: api.md  license.md
_doc/api/: 01. Registering New Conversions.md  02. Conversion Specifier Options.md  03. Defining the Output Handler.md  04. printf Extension Example.md  05. Predefined printf Handlers.md  api.md  functions.md  license.md  macros.md  types.md
_doc/license/: credits.md  gnu-lgpl.md  license.md  notice.md
assets/js/: main.js
doc/: README.md
src/: log.c  log.h
test/: config_final_00.c  config_final_01.c  config_final_02.c  config_final_03.c  config_final_04.c  config_final_05.c  config_final_06.c  config_init_00.c  config_init_01.c  config_init_02.c  config_init_03.c  config_init_04.c  config_init_05.c  event_new.c  event_new_00.c  event_new_01.c  event_new_02.c  event_new_03.c  event_new_04.c  event_new_05.c  event_new_06.c  event_new_07.c  event_new_08.c  event_new_09.c  event_new_10.c  event_new_11.c  event_new_12.c  event_new_13.c  event_new_14.c  event_new_15.c  event_new_16.c  event_new_17.c  event_new_18.c  event_new_19.c  event_new_20.c  loggers_final_00.c  loggers_final_01.c  loggers_final_02.c  loggers_final_03.c  loggers_final_04.c  (+22 more)
